--- a/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
@@ -46,7 +46,7 @@
                     <div class="col-3">
                         <a id="download-termly-plan-pdf" class="btn btn-sm btn-outline-info btn-block" role="button"
                         href="@controllers.planning.termly.routes.DownloadPdfController.downloadClassPdf(classDetails.id.id)">
-                            Download Plan PDF</a>
+                            View Termly Plan PDF</a>
                     </div>
                 </div>
 
