--- a/server/app/views/planning/termly/termlyPlansHome.scala.html
+++ b/server/app/views/planning/termly/termlyPlansHome.scala.html
@@ -64,8 +64,8 @@
                             </div>
                             <div class="col-xs-0 col-lg-5 muted">@userFirstName @userFamilyName</div>
                             <div class="col-xs-3 col-lg-2">
-                                <a class="btn btn-sm btn-outline-info btn-block" role="button"
-                                href="@controllers.planning.termly.routes.DownloadPdfController.downloadClassPdf(teacherClass.id.id)">View Termly Plan PDF</a>
+                                <a class="btn btn-sm btn-outline-danger btn-block bg-light" role="button"
+                                href="@controllers.planning.termly.routes.DownloadPdfController.downloadClassPdf(teacherClass.id.id)">Download Plan PDF</a>
                             </div>
                         </div>
                     </div>
