--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -212,3 +212,7 @@ input#classLevelInputCurriculumArea {
     margin-top: 1rem;
     margin-bottom: 2rem;
 }
+
+#generating-pdf {
+    display: none;
+}
