--- a/server/app/views/planning/termly/termlyPlansHome.scala.html
+++ b/server/app/views/planning/termly/termlyPlansHome.scala.html
@@ -85,7 +85,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title text-center" id="addNewGroupModalHeader">
-                            Generating PDF ...</h5>
+                            Generating PDF ... this can take a minute or so</h5>
                     </div>
                 </div>
             </div>
