--- a/server/app/views/planning/termly/pdfViewClassTermlyPlan.scala.html
+++ b/server/app/views/planning/termly/pdfViewClassTermlyPlan.scala.html
@@ -274,9 +274,9 @@
                                         </li>
                                     }
                                     @if(esOsBenchmarks.benchmarks.isEmpty) {
-                                        <li class="single-benchmark text-muted">
+                                        <div class="single-benchmark text-muted">
                                             No Benchmarks selected.
-                                        </li>
+                                        </div>
                                     }
                                 </ul>
                             </td>
